# tally-protocol

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  SDK_PROGRAM_DISPARITY_REPORT.md  SECURITY_AUDIT_REPORT.md  Taskfile.yml  pnpm-lock.yaml  pnpm-workspace.yaml  solana-subscriptions-prd.md
.cargo/: config.toml
.claude/: MIGRATION_GUIDE_V2.md
.github/: DEPLOYMENT_SETUP.md
.github/workflows/: deploy-devnet.yml  publish-sdk.yml  sdk-ci.yml
cli/: Cargo.toml
cli/src/: config.rs
cli/src/commands/: create_plan.rs  deactivate_plan.rs  init_merchant.rs  list_plans.rs  list_subs.rs  withdraw_fees.rs
cli/src/commands/simulate_events/: mod.rs
docs/: FEE_STRUCTURE.md  MULTI_MERCHANT_LIMITATION.md  OPERATIONAL_PROCEDURES.md  RATE_LIMITING_STRATEGY.md  SPAM_DETECTION.md  SUBSCRIPTION_LIFECYCLE.md
docs/tasks/: 002_missing_events_fix.md
examples/cancel/: README.md
examples/list-plans/: README.md
examples/subscribe/: README.md
program/: Cargo.toml  build.rs
program/idl/: subs.json
program/src/: accept_authority.rs  admin_withdraw_fees.rs  cancel_authority_transfer.rs  cancel_subscription.rs  close_agreement.rs  close_subscription.rs  constants.rs  create_payment_terms.rs  create_plan.rs  errors.rs  events.rs  execute_payment.rs  init_config.rs  init_merchant.rs  init_payee.rs  lib.rs  pause.rs  pause_agreement.rs  renew_subscription.rs  start_agreement.rs  start_subscription.rs  state.rs  transfer_authority.rs  unpause.rs  update_config.rs  update_merchant_tier.rs  update_plan.rs  update_plan_terms.rs  utils.rs
program/tests/: admin_withdraw_fees.rs  admin_withdraw_fees_max_limit.rs  allowance_validation.rs  cancel_authority_transfer.rs  cancel_subscription_delegate_validation.rs  close_subscription.rs  create_plan_duplicate.rs  create_plan_duplicate.rs.disabled  create_plan_grace_period_validation.rs  create_plan_grace_period_validation.rs.disabled  create_plan_max_price_validation.rs  error_code_semantics.rs  init_config_invalid_configuration.rs  init_config_platform_treasury_validation.rs  init_config_upgrade_authority_validation.rs  init_merchant_ata_validation.rs  init_merchant_mint_validation.rs  keeper_fee_split.rs  pause_unpause.rs  pda_validation.rs  plan_string_validation.rs  plan_string_validation.rs.disabled  platform_treasury_validation.rs  renew_subscription_double_renewal_boundary.rs  renew_subscription_grace_overflow.rs  renew_subscription_grace_overflow.rs.disabled  runtime_treasury_validation.rs  start_subscription_overflow.rs  start_subscription_reactivation.rs  trial_subscriptions.rs  update_config.rs  update_merchant_tier.rs  update_plan.rs  update_plan.rs.disabled  update_plan_terms.rs  update_plan_terms.rs.disabled
sdk/: Cargo.toml
sdk/idl/: tally_subs.json
sdk/src/: admin.rs  ata.rs  client.rs  dashboard.rs  dashboard_types.rs  error.rs  event_query.rs  events.rs  keypair.rs  lib.rs  pda.rs  program_types.rs  simple_client.rs  transaction_builder.rs  transaction_utils.rs  utils.rs  validation.rs
sdk/tests/: event_parsing_test.rs
tally-cli/: Cargo.toml
tally-cli/src/: config.rs  lib.rs  main.rs
tally-cli/src/commands/: create_plan.rs  dashboard.rs  deactivate_plan.rs  init_config.rs  init_merchant.rs  list_plans.rs  list_subs.rs  mod.rs  withdraw_fees.rs
tally-cli/src/commands/simulate_events/: mod.rs  tests.rs
tally-cli/src/utils/: formatting.rs  mod.rs
tally-pkgs/idl/: tally-subs.json
tally-pkgs/sdk/: package-lock.json  tsconfig.json
tally-pkgs/sdk/src/: index.ts  pda.ts
tally-pkgs/sdk/src/__tests__/: config.test.ts
tally-pkgs/types/: .eslintrc.js  package-lock.json  package.json
tally-sdk/: Cargo.toml
tally-sdk/idl/: tally_subs.json
tally-sdk/src/: ata.rs  client.rs  dashboard.rs  dashboard_types.rs  error.rs  event_query.rs  events.rs  keypair.rs  lib.rs  pda.rs  program_types.rs  signature.rs  simple_client.rs  transaction_builder.rs  transaction_utils.rs  utils.rs  validation.rs
tally-sdk/tests/: event_parsing_test.rs
tally-subs/src/: admin_withdraw_fees.rs  cancel_subscription.rs  errors.rs  events.rs  init_merchant.rs  lib.rs  state.rs
