[package]
name = "tally_subs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "tally_subs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
trace = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
