[package]
name = "tally_subs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "tally_subs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
trace = []
# Network-specific features for upgrade authority validation
mainnet-beta = []
devnet = []
testnet = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bincode = "1.3"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
bs58 = "0.5"
