[package]
name = "tally-cli"
version = "0.1.0"
edition = "2021"

[lints.rust]
# Forbid unsafe code in CLI too
unsafe_code = "forbid"

[lints.clippy]
# Standard safety lints but allowing for clap derive macros
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[[bin]]
name = "tally-cli"
path = "src/main.rs"

[lib]
name = "tally_cli"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
anchor-lang.workspace = true
base64.workspace = true
borsh.workspace = true
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
solana-sdk.workspace = true
tally-sdk = { version = "0.1.0", path = "../tally-sdk" }
tokio = { workspace = true, features = ["fs", "net", "signal"] }
tokio-tungstenite = "0.24"
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5"
